--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -5,29 +5,25 @@
     padding: 50px 0;
     padding-top: 150px;
 }
-.row{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
 
 .jonah-image{
     width: 100%;
-    border-radius: 15px;
-    padding: 40px 0;
-}
-
-.about-column-1{
-    flex-basis: 35%;
-}
-
-.about-column-2{
-    flex-basis: 60%;
 }
 
 .about-info{
     font-size: 30px;
     color: rgb(35, 203, 228);
+}
+
+#about-grid{
+    grid-template-columns: repeat(1, 1fr);
+
+    @media (min-width: 1280px) {
+    display: grid;
+    grid-template-columns:40% 60%;
+    padding: 50px 200px;
+    gap: 25px;
+    }
 }
 
 .about-info2{
